Apparition progressive des éléments au fur et à mesure du scrolling, avec un effet fade in

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <img src="Logos/fleche_down_header.png" alt="fleche_down_header">
         </div>
         <!-- batman au cinema -->
-        <section id="cinema" class="bloc">
+        <section id="cinema" class="bloc element">
             <h1>BATMAN AU CINEMA</h1>
             <p>Le personnage de Batman est un super héros de l’univers de DC Comics. Il a été créé par le dessinateur Bob Kane et le scénariste Bill Finger et apparaît pour la première fois dans le comic book Detective Comics en 1939. Batman se différencie
                 de Superman, alors héros majeur de DC, car il n’a aucun pouvoir. Il sera porté au cinema pour la première fois en 1943 par Lewis Wilson et bénéficiera de nombreux reboot, donnant l’occasion à de multiples acteurs d’interpréter l’homme
@@ -99,7 +99,7 @@
             </div>
         </section>
         <!-- nemesis -->
-        <section id="nemesis" class="bloc">
+        <section id="nemesis" class="bloc element">
             <div class="nemesis">
                 <h1>NEMESIS</h1>
                 <img src="Illustrations/Bathome13.png" width="150px" alt="">
@@ -152,7 +152,7 @@
             </div>
         </section>
         <!-- allié -->
-        <section class="bloc">
+        <section class="bloc element">
             <div class="allies">
                 <h1>ALLIES</h1>
                 <img src="Illustrations/Bathome12.png" width="350px" alt="">
@@ -204,19 +204,19 @@
             </div>
         </section>
         <!-- justice league -->
-        <section class="bloc">
+        <section class="bloc element">
             <h1>JUSTICE LEAGUE</h1>
             <P>Lorsque la Terre est menacée les plus grands super-héros s’allient pour la protéger. Ils doivent cependant apprendre à se faire confiance mutuellement et à faire équipe ce qui ne sera pas chose aisée. Ensemble ils forment la Justice League,
                 les plus grands superhéros de la Terre, ceux vers qui le monde entier se tourne lorsque les menaces extraterrestres ou surnaturelles menacent son existence.</P>
         </section>
-        <div class="justice">
+        <div class="justice element">
             <img src="Illustrations/Bathome11.png" width="100%" alt="">
         </div>
         <!-- Multimedia -->
-        <section class="bloc">
+        <section class="bloc element">
             <h1>MULTIMEDIA</h1>
         </section>
-        <div class="multimedia">
+        <div class="multimedia element">
 
             <a href=""><img class="fleche-g-d" src="Logos/icon_fleche_1.png" alt="icon_fleche_1"></a>
             <div class="box">
@@ -235,7 +235,7 @@
             <a href=""><img class="fleche-g-d" src="Logos/icon_fleche_2.png" alt="icon_fleche_2"></a>
         </div>
         <!-- video -->
-        <section class="bloc">
+        <section class="bloc element">
             <div class="video">
                 <iframe width="100%" height="444" src="https://www.youtube.com/embed/jXrFsn9pcZY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
