--- a/game.html
+++ b/game.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="full-screen.css">
-    <script src="script.js" defer></script>
+    <script src="scriptGame.js" defer></script>
     <title>Game</title>
 </head>
 
