Scrolling progressif lorsqu’on effectue un clic sur les boutons Voir le héros et Les adversaires

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
                 </p>
                 <h1>Il est Batman</h1>
                 <div class="bouttons">
-                    <a href="#cinema">VOIR LES HEROS</a>
-                    <a href="#nemesis">LES ADVERSAIRES</a>
+                    <a onclick="scrollToSection('cinema')">VOIR LES HEROS</a>
+                    <a onclick="scrollToSection('nemesis')">LES ADVERSAIRES</a>
                 </div>
             </div>
             <img src="Logos/fleche_down_header.png" alt="fleche_down_header">
