--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <div class="gallery">
                 <div class="gallery-items">
                     <div onmouseover="mOver(this)" onmouseout="mOut(this)">
-                        <img src="Illustrations/Bathome2.png" alt="Robert Pattinson">
+                        <img class="img-zoom" src="Illustrations/Bathome2.png" alt="Robert Pattinson">
                         <div class="desc hide">
                             <div class="form-ronde">
                                 <img src="" alt="">
@@ -72,7 +72,7 @@
                 </div>
                 <div class="gallery-items">
                     <div onmouseover="mOver(this)" onmouseout="mOut(this)">
-                        <img src="Illustrations/Bathome3.png" alt="Christian Bale">
+                        <img class="img-zoom" src="Illustrations/Bathome3.png" alt="Christian Bale">
                         <div class="desc hide">
                             <div class="form-ronde">
                                 <img src="" alt="">
@@ -85,7 +85,7 @@
                 </div>
                 <div class="gallery-items">
                     <div onmouseover="mOver(this)" onmouseout="mOut(this)">
-                        <img src="Illustrations/Bathome4.png" alt="Ben Affleck">
+                        <img class="img-zoom" src="Illustrations/Bathome4.png" alt="Ben Affleck">
                         <div class="desc hide">
                             <div class="form-ronde">
                                 <img src="" alt="">
@@ -111,7 +111,7 @@
             <div class="gallery">
                 <div class="gallery-items">
                     <div onmouseover="mOver(this)" onmouseout="mOut(this)">
-                        <img src="Illustrations/Bathome5.png" alt="The Riddler Paul Dano">
+                        <img class="img-zoom" src="Illustrations/Bathome5.png" alt="The Riddler Paul Dano">
 
                         <div class="desc hide">
                             <div class="form-ronde">
@@ -125,7 +125,7 @@
                 </div>
                 <div class="gallery-items">
                     <div onmouseover="mOver(this)" onmouseout="mOut(this)">
-                        <img src="Illustrations/Bathome6.png" alt="Christian Bale">
+                        <img class="img-zoom" src="Illustrations/Bathome6.png" alt="Christian Bale">
                         <div class="desc hide">
                             <div class="form-ronde">
                                 <img src="" alt="">
@@ -138,7 +138,7 @@
                 </div>
                 <div class="gallery-items">
                     <div onmouseover="mOver(this)" onmouseout="mOut(this)">
-                        <img src="Illustrations/Bathome7.png" alt="Ben Affleck">
+                        <img class="img-zoom" src="Illustrations/Bathome7.png" alt="Ben Affleck">
                         <div class="desc hide">
                             <div class="form-ronde">
                                 <img src="" alt="">
@@ -163,7 +163,7 @@
             <div class="gallery">
                 <div class="gallery-items">
                     <div onmouseover="mOver(this)" onmouseout="mOut(this)">
-                        <img src="Illustrations/Bathome9.png" alt="Alfred Pennyworth Michael">
+                        <img class="img-zoom" src="Illustrations/Bathome9.png" alt="Alfred Pennyworth Michael">
                         <div class="desc hide">
                             <div class="form-ronde">
                                 <img src="" alt="">
@@ -176,7 +176,7 @@
                 </div>
                 <div class="gallery-items">
                     <div onmouseover="mOver(this)" onmouseout="mOut(this)">
-                        <img src="Illustrations/Bathome8.png" alt="Catwoman Zoé Kravitz">
+                        <img class="img-zoom" src="Illustrations/Bathome8.png" alt="Catwoman Zoé Kravitz">
                         <div class="desc hide">
                             <div class="form-ronde">
                                 <img src="" alt="">
@@ -190,7 +190,7 @@
                 <div class="gallery-items">
                     <div onmouseover="mOver(this)" onmouseout="mOut(this)">
 
-                        <img src="Illustrations/Bathome10.png" alt="James Gordon">
+                        <img class="img-zoom" src="Illustrations/Bathome10.png" alt="James Gordon">
                         <div class="desc hide">
                             <div class="form-ronde">
                                 <img src="" alt="">
@@ -210,7 +210,7 @@
                 les plus grands superhéros de la Terre, ceux vers qui le monde entier se tourne lorsque les menaces extraterrestres ou surnaturelles menacent son existence.</P>
         </section>
         <div class="justice element">
-            <img src="Illustrations/Bathome11.png" width="100%" alt="">
+            <img class="img-zoom" src="Illustrations/Bathome11.png" width="100%" alt="">
         </div>
         <!-- Multimedia -->
         <section class="bloc element">
@@ -237,7 +237,8 @@
         <!-- video -->
         <section class="bloc element">
             <div class="video">
-                <iframe width="100%" height="444" src="https://www.youtube.com/embed/jXrFsn9pcZY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe class="img-zoom" width="100%" height="444" src="https://www.youtube.com/embed/jXrFsn9pcZY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe>
             </div>
         </section>
         <!-- notre footer -->
